#[tool.poetry]
[project]
name = "ibex-artys750"
version = "0.1.0"
description = "Open-source hardware root-of-trust"
authors = []
license = "Apache 2.0"
readme = "README.md"
package-mode = false
requires-python = "^3.10"

dependencies = [
"packaging == 23.1",
"anytree == 2.8.0",
"hjson == 3.1.0",
"mako == 1.2.2",
"pyyaml == 6.0",
"wheel == 0.41.2",
"edalize @ git+https://github.com/lowRISC/edalize.git@2a70c44",
"fusesoc @ git+https://github.com/lowRISC/fusesoc.git@ot-0.6",
"rpds-py == 0.13.2"
]

# [tool.poetry.dependencies]
# # [project.dependencies]
# python = "^3.10"
# packaging = "23.1"
# anytree = "2.8.0"
# hjson = "3.1.0"
# mako = "1.2.2"
# pyyaml = "6.0"
# wheel = "0.41.2"
# edalize = { git = "https://github.com/lowRISC/edalize.git", tag = "v0.4.0"}
# fusesoc = { git = "https://github.com/lowRISC/fusesoc.git", tag = "ot-0.4" }

# Update this when poetry2nix adds hash of later version
# rpds-py = "0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
